[project]
name = "mmtrack"
version = "0.1.0"
description = "bacterial cell detection and tracking in mother machine"
authors = [
    {name = "Nora",email = "nora.vivanco@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.8"
dependencies = [
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.12.15)",
    "aiosignal (==1.4.0)",
    "alabaster (==1.0.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.11.0)",
    "app-model (==0.4.0)",
    "appdirs (==1.4.4)",
    "appnope (==0.1.4)",
    "argon2-cffi (==25.1.0)",
    "argon2-cffi-bindings (==25.1.0)",
    "arrow (==1.3.0)",
    "asttokens (==3.0.0)",
    "async-lru (==2.0.5)",
    "attrs (==25.3.0)",
    "babel (==2.17.0)",
    "backcall (==0.2.0)",
    "beautifulsoup4 (==4.14.2)",
    "bleach (==6.2.0)",
    "build (==1.3.0)",
    "cachey (==0.2.1)",
    "certifi (==2025.8.3)",
    "cffi (==2.0.0)",
    "charset-normalizer (==3.4.3)",
    "click (==8.3.0)",
    "cloudpickle (==3.1.1)",
    "comm (==0.2.3)",
    "contourpy (==1.3.3)",
    "crc32c (==2.7.1)",
    "cycler (==0.12.1)",
    "dask (==2024.3.1)",
    "debugpy (==1.8.17)",
    "decorator (==5.2.1)",
    "defusedxml (==0.7.1)",
    "docopt (==0.6.2)",
    "docstring-parser (==0.17.0)",
    "docutils (==0.21.2)",
    "donfig (==0.8.1.post1)",
    "executing (==2.2.1)",
    "fastjsonschema (==2.21.2)",
    "filelock (==3.19.1)",
    "flexcache (==0.3)",
    "flexparser (==0.4)",
    "fonttools (==4.60.1)",
    "fqdn (==1.5.1)",
    "freetype-py (==2.5.1)",
    "frozenlist (==1.7.0)",
    "fsspec (==2025.9.0)",
    "h11 (==0.16.0)",
    "heapdict (==1.0.1)",
    "hsluv (==5.0.4)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "imageio (==2.37.0)",
    "imagesize (==1.4.1)",
    "importlib-metadata (==8.7.0)",
    "in-n-out (==0.2.1)",
    "ipykernel (==6.30.1)",
    "ipython (==8.12.3)",
    "ipython-pygments-lexers (==1.1.1)",
    "ipywidgets (==8.1.7)",
    "isoduration (==20.11.0)",
    "jedi (==0.19.2)",
    "jinja2 (==3.1.6)",
    "joblib (==1.5.2)",
    "json5 (==0.12.1)",
    "jsonpointer (==3.0.0)",
    "jsonschema (==4.25.1)",
    "jsonschema-specifications (==2025.9.1)",
    "jupyter (==1.1.1)",
    "jupyter-console (==6.6.3)",
    "jupyter-events (==0.12.0)",
    "jupyter-lsp (==2.3.0)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.8.1)",
    "jupyter-server (==2.17.0)",
    "jupyter-server-terminals (==0.5.3)",
    "jupyterlab (==4.4.9)",
    "jupyterlab-pygments (==0.3.0)",
    "jupyterlab-server (==2.27.3)",
    "jupyterlab-widgets (==3.0.15)",
    "kiwisolver (==1.4.9)",
    "lark (==1.3.0)",
    "lazy-loader (==0.4)",
    "llvmlite (==0.45.0)",
    "locket (==1.0.0)",
    "magicgui (==0.10.1)",
    "markdown-it-py (==4.0.0)",
    "markupsafe (==3.0.3)",
    "matplotlib (==3.10.6)",
    "matplotlib-inline (==0.1.7)",
    "mdurl (==0.1.2)",
    "mistune (==3.1.4)",
    "mpmath (==1.3.0)",
    "multidict (==6.6.4)",
    "napari (==0.6.4)",
    "napari-console (==0.1.3)",
    "napari-correct-drift (==0.4.0)",
    "napari-fast4dreg (==0.0.1)",
    "napari-plugin-engine (==0.2.0)",
    "napari-svg (==0.2.1)",
    "nbclient (==0.10.2)",
    "nbconvert (==7.16.6)",
    "nbformat (==5.10.4)",
    "nest-asyncio (==1.6.0)",
    "networkx (==3.5)",
    "notebook (==7.4.7)",
    "notebook-shim (==0.2.4)",
    "npe2 (==0.7.9)",
    "numba (==0.62.1)",
    "numcodecs (==0.16.3)",
    "numpy (==2.3.3)",
    "numpydoc (==1.9.0)",
    "opencv-python (==4.10.0.84)",
    "opencv-python-headless (==4.10.0.84)",
    "overrides (==7.7.0)",
    "packaging (==25.0)",
    "pandas (==2.3.3)",
    "pandocfilters (==1.5.1)",
    "parso (==0.8.5)",
    "partd (==1.4.2)",
    "pexpect (==4.9.0)",
    "pickleshare (==0.7.5)",
    "pillow (==11.3.0)",
    "pint (==0.25)",
    "platformdirs (==4.4.0)",
    "pooch (==1.8.2)",
    "prometheus-client (==0.23.1)",
    "prompt-toolkit (==3.0.52)",
    "propcache (==0.3.2)",
    "psutil (==7.1.0)",
    "psygnal (==0.14.2)",
    "ptyprocess (==0.7.0)",
    "pure-eval (==0.2.3)",
    "pyconify (==0.2.1)",
    "pycparser (==2.23)",
    "pydantic (==2.11.9)",
    "pydantic-compat (==0.1.2)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.2)",
    "pyopengl (==3.1.10)",
    "pyparsing (==3.2.5)",
    "pyproject-hooks (==1.2.0)",
    "pyside6 (==6.9.3)",
    "pyside6-addons (==6.9.3)",
    "pyside6-essentials (==6.9.3)",
    "python-dateutil (==2.9.0.post0)",
    "python-json-logger (==3.3.0)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.3)",
    "pyzmq (==27.1.0)",
    "qtconsole (==5.7.0)",
    "qtpy (==2.4.1)",
    "referencing (==0.36.2)",
    "requests (==2.32.5)",
    "rfc3339-validator (==0.1.4)",
    "rfc3986-validator (==0.1.1)",
    "rfc3987-syntax (==1.1.0)",
    "rich (==14.1.0)",
    "roman-numerals-py (==3.1.0)",
    "rpds-py (==0.27.1)",
    "scikit-image (==0.25.2)",
    "scikit-learn (==1.7.2)",
    "scipy (==1.16.2)",
    "send2trash (==1.8.3)",
    "shellingham (==1.5.4)",
    "shiboken6 (==6.9.3)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "snowballstemmer (==3.0.1)",
    "soupsieve (==2.8)",
    "sphinx (==8.2.3)",
    "sphinxcontrib-applehelp (==2.0.0)",
    "sphinxcontrib-devhelp (==2.0.0)",
    "sphinxcontrib-htmlhelp (==2.1.0)",
    "sphinxcontrib-jsmath (==1.0.1)",
    "sphinxcontrib-qthelp (==2.0.0)",
    "sphinxcontrib-serializinghtml (==2.0.0)",
    "stack-data (==0.6.3)",
    "superqt (==0.7.6)",
    "sympy (==1.14.0)",
    "terminado (==0.18.1)",
    "threadpoolctl (==3.6.0)",
    "tifffile (==2025.6.11)",
    "tinycss2 (==1.4.0)",
    "tomli-w (==1.2.0)",
    "toolz (==1.0.0)",
    "torch (==2.8.0)",
    "torch-geometric (==2.6.1)",
    "tornado (==6.5.2)",
    "tqdm (==4.67.1)",
    "traitlets (==5.14.3)",
    "typer (==0.19.2)",
    "types-python-dateutil (==2.9.0.20250822)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.2)",
    "uri-template (==1.3.0)",
    "urllib3 (==2.5.0)",
    "vispy (==0.15.2)",
    "wcwidth (==0.2.14)",
    "webcolors (==24.11.1)",
    "webencodings (==0.5.1)",
    "websocket-client (==1.8.0)",
    "widgetsnbextension (==4.0.14)",
    "wrapt (==1.17.3)",
    "yarg (==0.1.9)",
    "yarl (==1.20.1)",
    "zarr (==3.1.3)",
    "zipp (==3.23.0)",
    "huggingface-hub (>=0.35.3,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
